--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://stendavidson.GitHub.io/github-pages-app/",
+  "homepage": "https://stendavidson.GitHub.io/futuresports/",
   "name": "futuresports",
   "version": "0.1.0",
   "private": true,
